Update limpiar() 2